# 7574-sistemas-distribuidos-i

./: .gitignore  README.md  colas de mensajes  mail marian  marshalling
broker/: CMakeLists.txt  DISTRIBUTED_MOM.md  README.md
broker/client/: broker.c  broker.h  broker_handler.h  broker_id.c  broker_id.h  broker_req_handler.c  broker_resp_handler.c  client.c  client.h  test_client.c  test_client_read.c  test_client_write.c
broker/common/: log.c  message.h
broker/common/ipc/: msg_queue.c  msg_queue.h  resources.h  semaphore.c  semaphore.h  shm.c  shm.h  sig.c  sig.h  socket.c  socket.h
broker/common/log/: log.c
broker/db-server/: db.c  db_handler.c  db_message.h  db_server.c  db_server.h
broker/server/: db-connection.c  db-connection.h  db.c  db.h  global_id.c  global_id.h  req_handler.c  resp_handler.c  ring_connection.c  ring_connection.h  server.c  server.h  worker.c
ejercicioDebug/codigo/: .debugueame.c.swp  .even.c.swp  .odd.c.swp  Enunciado.txt  Makefile  child.11244  child.11245  child.11246  child.11247  child.11248  child.11249  child.11250  child.11251  child.11252  child.11253  child.11254  child.11255  child.11256  child.11257  child.11258  child.11259  child.11260  child.11261  child.11262  child.11263  child.11264  child.11265  child.11266  child.11267  child.11269  child.11270  child.11271  child.11272  child.11273  child.11274  child.11275  child.11276  child.11277  child.11278  child.11279  (+133 more)
ejercicioDebug/codigo/include/: logger.h  msg.h  semaforo.h
java-ee/jsf-jpa/: README.md
java-ee/jsf-jpa/demo/: pom.xml
java-ee/jsf-jpa/demo/src/main/webapp/: index.xhtml
java-ee/servlets-jsp/: README.md
java-ee/servlets-jsp/beer-menu/web/: index.html
java-ee/servlets-jsp/beer-menu/web/view/: color-form.html  intensity-form.html  result-EL.jsp  result-java.jsp
java-ee/servlets-jsp/java-ee-hello-world/web/view/: hello-world.jsp
java/server/src/: Client.java  Constants.java  Main.java  RemoteServer.java
museo/: Makefile  main.c  mensaje.h  puerta.c  semaphore.c  semaphore.h
museo/include/: resources.h
museum/src/: Makefile  admin.c  constants.h  entranceDoor.c  exitDoor.c  guide.c  ipcrm.sh  ipcsGen.c  main  main.c  message.h  museumApi.h  person.c  personGen.c  signalTest.c  timer.c
museum/src/include/: logger.h  measure.h  msg.h  resources.h  semaforo.h  semaphore.h  shm.h  signalUtil.h
rmi/client/src/com/client/: Client.java
rmi/interface/src/com/: Constants.java  Server.java
rmi/server/src/com/remote/: Main.java  RemoteServer.java
rpc/: rpc.md
rpc/hola/: hola.h  hola.x  hola_client.c  hola_clnt.c  hola_server.c  hola_svc.c
rpc/sumar/: Makefile.sumar  sumar.h  sumar.x  sumar_client.c  sumar_clnt.c  sumar_server.c  sumar_svc.c
sockets/: Makefile  client.c  server  server.c
teoria/mom/: mom
tp-final/: README.md
tp-final/contabilidapp/: pom.xml
tp-final/contabilidapp-backend/: pom.xml
tp-final/contabilidapp-backend/src/main/webapp/WEB-INF/: web.xml
tp-final/contabilidapp/src/main/webapp/: index.xhtml
tp-final/contabilidapp/src/main/webapp/WEB-INF/: web.xml
tp-final/contabilidapp/src/main/webapp/view/: close-upload-period.xhtml  control.xhtml  download-aggregated.xhtml  results.xhtml  start-upload-period.xhtml  upload.xhtml  (+1 more)
tp-final/demo-files/: control-errores.txt  control-ok.txt  transacciones-1.txt  transacciones-2.txt  transacciones-3.txt
tp-final/deploy-files/: contabilidapp_schema.sql
tpfinal/: pom.xml
(+81 files in other folders)
